# baza

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
baza/: cli.py
tests/: test_cli.py
