[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "baza"
authors = [{name = "Arkadiusz Halicki", email = "halicki.arkadiusz@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "typer >=0.4.1,<0.5",
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.1,<8",
]

[project.scripts]
baza = "baza.cli:cli"

[project.urls]
Home = "https://github.com/halicki/baza"
