[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "baza"
authors = [{name = "Arkadiusz Halicki", email = "halicki.arkadiusz@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "typer >=0.4.1,<0.5",
]

[project.optional-dependencies]
test = [
    "black == 22.3.0",
    "flake8 == 4.0.1",
    "mockito == 1.3.0",
    "pre-commit == 2.18.1",
    "pytest >=7.1.1,<8",
    "pytest-mockito == 0.0.4",
]

[project.scripts]
baza = "baza.cli:cli"

[project.urls]
Home = "https://github.com/halicki/baza"
